--- a/.github/workflows/update-radarr-list.yml
+++ b/.github/workflows/update-radarr-list.yml
@@ -20,15 +20,22 @@ jobs:
         go-version: '1.21'
         
     - name: Install dependencies
-      run: go mod download
+      run: |
+        cd .github/scripts
+        go mod download
+        go mod verify
         
     - name: Run tests
-      run: go test -v
+      run: |
+        cd .github/scripts
+        go test -v
         
     - name: Run scraper
       env:
         TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
-      run: go run main.go
+      run: |
+        cd .github/scripts
+        go run main.go
       
     - name: Check for changes
       id: changes
